# GuitarTuner

./: .gitignore  CMakeLists.txt  README.md  TUTORIAL.md
resources/: tuner_editor.uidesc  win32resource.rc
src/: controller.cpp  controller.h  entry.cpp  plugids.h  processor.cpp  processor.h  version.h
src/dsp/: mpm_detector.cpp  mpm_detector.h  pitch_detector.h  ring_buffer.h
src/ui/: tuner_view.cpp  tuner_view.h
tests/: test_pitch.cpp
